# musistash-platform

./: .dockerignore  .env.local  .gitignore  .railwayignore  ANALYSIS_SAVING_IMPLEMENTATION.md  CAREER_HIGHLIGHTS_FIX.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.full-audio  Dockerfile.simplified  EFFICIENT_PROFILE_UPDATES.md  ENHANCED_RESONANCE_SCORE.md  HYBRID_AUDIO_ANALYSIS.md  ML_INTEGRATION_DEMO.md  PYAUDIOANALYSIS_INTEGRATION_COMPLETE.md  PYAUDIOANALYSIS_MIGRATION.md  Procfile  QUICK_DEPLOYMENT_CHECKLIST.md  RAILWAY_DEPLOYMENT.md  README.md  SUPABASE_SETUP.md  TROUBLESHOOTING.md  __init__.py  add-artist-stats-fields.sql  add-banner-photo-to-artist-profiles.sql  add-biography-field.sql  add-cancelled-status.sql  add-complete-analysis-fields.sql  add-enhanced-audio-fields.sql  add-missing-artist-profile-fields.sql  add-missing-profile-fields.sql  add-pending-status.sql  add-profile-fields.sql  add-spotify-integration-fields.sql  add-uploaded-tracks-columns.sql  build.sh  check-artists.sql  check-favorite-venues-table.sql  check-projects.sql  (+67 more)
.frontend-backup/: package-lock.json
backend/: .cache  .env  Procfile  README.md  audio_analysis_factory.py  billboard_service.py  enhanced_audio_analysis.py  full_audio_analysis.py  gemini_analysis_service.py  main.py  main_broken.py  ml_service.py  model_analysis.py  railway.toml  render.yaml  requirements.txt  requirements_full.txt  requirements_ml.txt  simplified_audio_analysis.py  spotify_test.py  supabase_config.py  test_enhanced_resonance.py  test_essentia_only.py  test_gemini_curl.py  test_real_data.py  (+4 more)
(+95 files in other folders)
