[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musistash-platform"
version = "1.0.0"
description = "MusiStash Platform - Music Industry Investment Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "openai",
    "requests",
    "httpx",
    "spotipy",
    "numpy",
    "scikit-learn",
    "google-generativeai>=0.8.0",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "pyjwt",
    "python-jose[cryptography]",
    "pytrends",
    "yfinance",
    "lyricsgenius",
    "google-api-python-client",
    "scipy",
    "textblob",
    "nltk",
    "pandas",
    "xgboost"
] 